[package]
name = "disktimer"
version = "0.1.0"
authors = ["lukser"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.12"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown